# Aumann-SHAP

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
docs/: ANONYMITY_CHECKLIST.md  REPRODUCIBILITY.md
experiments/: run_german_credit.py  run_mnist.py
experiments/german_credit/: README.md  convergence.py  global_analysis.py  local_analysis.py  m_sweep.py  within_pot.py
experiments/german_credit/cache/: models_split_rs1.joblib
experiments/mnist/: README.md  equal_split.py  global.py  globalheat.py  heatmaps.py  micro_game.py  patchtest.py  train_mnist.py
experiments/simulations/: runtime_scaling.py
scripts/: download_data.py
src/aumann_shap/: __init__.py  explain.py  tabular_gridstate.py
tests/: smoke_explain.py  smoke_mc_autobatch.py
