[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aumann-shap"
version = "0.0.0"
description = "Aumann-SHAP: micro-game Shapley attributions on local cubes"
readme = "README.md"
requires-python = ">=3.9"
dependencies = ["numpy", "pandas", "scikit-learn", "joblib", "matplotlib", "torch", "torchvision", "xgboost"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]